# glyph-brush

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml  bench  release  rls.toml  test  testwatch
.github/workflows/: ci.yml
benches/: bench.rs  gfx_noop.rs  small_lipsum.txt
draw-cache/: CHANGELOG.md  Cargo.toml  README.md
draw-cache/benches/: draw_cache.rs  st_vs_mt.rs
draw-cache/src/: geometry.rs  lib.rs
examples/: 100000_items.txt  1000_items.txt  complex_layout.rs  depth.rs  loads-of-unicode.txt  paragraph.rs  performance.rs  varied.rs
gfx-glyph/: CHANGELOG.md  Cargo.toml  README.md
gfx-glyph/benches/: bench.rs  gfx_noop.rs  lots_of_lipsum.txt
gfx-glyph/examples/: depth.rs  init.rs  paragraph.rs  performance.rs  pre_positioned.rs  varied.rs
gfx-glyph/src/: builder.rs  draw_builder.rs  lib.rs  pipe.rs  trace.rs
gfx-glyph/src/shader/: vert.glsl
glyph-brush/: CHANGELOG.md  Cargo.toml  README.md
glyph-brush-layout/: CHANGELOG.md  Cargo.toml  README.md
glyph-brush-layout/src/: builtin.rs  characters.rs  font.rs  lib.rs  linebreak.rs  lines.rs  section.rs  words.rs
glyph-brush/benches/: bench.rs  glyph_brush.rs
glyph-brush/examples/: draw_cache_guts.rs  gl.rs  opengl.rs
glyph-brush/examples/shader/: frag.glsl  img.fs  img.vs  text.fs  vert.glsl
glyph-brush/examples/text/: lipsum.txt
glyph-brush/src/: extra.rs  glyph_brush.rs  glyph_brush_indexed.rs  glyph_calculator.rs  legacy.rs  lib.rs  owned_section.rs  section.rs
glyph-brush/src/glyph_brush/: builder.rs  mod.rs
glyph-brush/src/glyph_brush_indexed/: builder.rs
glyph-brush/src/section/: builder.rs  owned.rs  refed.rs
layout/: CHANGELOG.md  Cargo.toml  README.md
layout/src/: builtin.rs  characters.rs  font.rs  lib.rs  linebreak.rs  lines.rs  section.rs  words.rs
src/: builder.rs  glyph_calculator.rs  gpu_cache.rs  headless.rs  layout.rs  lib.rs  linebreak.rs  owned_section.rs  performance_stats.rs  pipe.rs  section.rs  simple_section.rs  trace.rs
src/layout/: builtin.rs  characters.rs  line.rs  linebreak.rs  lines.rs  mod.rs  words.rs
src/shader/: frag.glsl  geo.glsl  vert.glsl
