[package]
name = "gfx_glyph"
version = "0.9.0"
authors = ["Alex Butler <alexheretic@gmail.com>"]
description = "Fast GPU cached text rendering using gfx-rs & rusttype"
repository = "https://github.com/alexheretic/gfx-glyph"
keywords = ["font", "ttf", "truetype", "gfx", "text"]
license = "Apache-2.0"
exclude = ["examples/*.ttf", "examples/*.txt", "benches/*.*"]
readme="README.md"

[dependencies]
log = "0.4"
rusttype = { version = "0.4", features = ["gpu_cache"] }
gfx = "0.17"
gfx_core = "0.8"
unicode-normalization = "0.1"
ordered-float = "0.5"
xi-unicode = "0.1"
linked-hash-map = "0.5"
backtrace = "0.3"
twox-hash = "1"

[dev-dependencies]
env_logger = "0.5"
approx = "0.1"
gfx_window_glutin = "0.21"
glutin = "0.13"
time = "0.1"
cgmath = "0.16"
spin_sleep = "0.3"
lazy_static = "1"

[features]
# Compiles benchmark code, to be avoided normally as this currently requires nightly rust
bench = []
# Compiles in additional performance stats gathering and info-logging
# each draw (when slower than 1ms)
performance_stats = []
