[package]
name = "gfx_glyph"
version = "0.13.0"
authors = ["Alex Butler <alexheretic@gmail.com>"]
description = "Fast GPU cached text rendering using gfx-rs & rusttype"
repository = "https://github.com/alexheretic/gfx-glyph"
keywords = ["font", "ttf", "truetype", "gfx", "text"]
license = "Apache-2.0"
exclude = ["examples/*.ttf", "examples/*.txt", "benches/*.*"]
readme="README.md"

[dependencies]
backtrace = "0.3"
gfx = "0.17"
gfx_core = "0.8"
glyph_brush = { version = "0.0.1", path = "glyph-brush" }
log = "0.4"
ordered-float = "0.5"
rustc-hash = "1"
rusttype = { version = "0.7", features = ["gpu_cache"] }
seahash = "3"

[dev-dependencies]
env_logger = "0.5"
approx = "0.3"
gfx_device_gl = "0.15.3"
gfx_window_glutin = "0.26"
glutin = "0.18"
cgmath = "0.16"
spin_sleep = "0.3"

[features]
# Compiles in additional performance stats gathering and info-logging
# each draw (when slower than 1ms)
performance_stats = []

[workspace]
