[package]
name = "glyph_brush_draw_cache"
version = "0.1.6"
authors = ["Alex Butler <alexheretic@gmail.com>"]
edition = "2021"
description = "Texture draw cache for ab_glyph"
repository = "https://github.com/alexheretic/glyph-brush"
keywords = ["font", "ttf", "truetype", "gfx", "text"]
license = "Apache-2.0"
readme = "README.md"

[dependencies]
ab_glyph = "0.2.2"
linked-hash-map = "0.5.4"
rustc-hash = "2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossbeam-channel = "0.5"
crossbeam-deque = "0.8"
rayon = "1.3"

[dev-dependencies]
approx = "0.5"
criterion = "0.5"
glyph_brush_layout = { version = "0.2", path = "../layout" }

[[bench]]
name = "draw_cache"
harness = false

[[bench]]
name = "st_vs_mt"
harness = false
