[package]
name = "gfx_glyph"
version = "0.17.0"
authors = ["Alex Butler <alexheretic@gmail.com>"]
edition = "2018"
description = "Fast GPU cached text rendering using gfx-rs & ab_glyph"
repository = "https://github.com/alexheretic/glyph-brush"
keywords = ["font", "ttf", "truetype", "gfx", "text"]
license = "Apache-2.0"
readme = "README.md"

[dependencies]
backtrace = "0.3"
gfx = "0.18"
gfx_core = "0.9"
glyph_brush = { version = "0.7", path = "../glyph-brush" }
log = "0.4"

[dev-dependencies]
cgmath = "0.18"
env_logger = { version = "0.10", default-features = false }
glutin = "0.30.3"
winit = "0.27"
old_school_gfx_glutin_ext = { git = "https://github.com/alexheretic/old-school-gfx-glutin-ext", branch = "glutin-next" }
spin_sleep = "1"
