[package]
name = "glyph_brush_layout"
version = "0.1.7"
authors = ["Alex Butler <alexheretic@gmail.com>"]
edition = "2018"
description = "Text layout for rusttype"
repository = "https://github.com/alexheretic/gfx-glyph"
keywords = ["layout", "text"]
license = "Apache-2.0"
readme="README.md"

[dependencies]
full_rusttype = { version = "0.7.4", features = ["gpu_cache"], package = "rusttype" }
xi-unicode = "0.2"

[dev-dependencies]
approx = "0.3.1"
lazy_static = "1"
ordered-float = "1"
