[package]
name = "glyph_brush"
version = "0.7.3"
authors = ["Alex Butler <alexheretic@gmail.com>"]
edition = "2018"
description = "Fast cached text render library using ab_glyph"
repository = "https://github.com/alexheretic/glyph-brush"
keywords = ["font", "ttf", "truetype", "text"]
license = "Apache-2.0"
readme = "README.md"

[dependencies]
glyph_brush_layout = { version = "0.2", path = "../layout" }
glyph_brush_draw_cache = { version = "0.1.1", path = "../draw-cache" }
log = "0.4.4"
ordered-float = "2.5.1"
rustc-hash = "1"
twox-hash = { version = "1.6.1", default-features = false }

# enable twox-hash rand/std everywhere except wasm
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.twox-hash]
version = "1.6.1"
features = ["std"]

[dev-dependencies]
env_logger = { version = "0.9", default-features = false }
once_cell = "1.3"
gl = "0.14"
glutin = "0.27"
spin_sleep = "1"
approx = "0.5"
criterion = "0.3"

[[bench]]
name = "glyph_brush"
harness = false
