[package]
name = "glyph_brush"
version = "0.7.7"
authors = ["Alex Butler <alexheretic@gmail.com>"]
edition = "2018"
description = "Fast cached text render library using ab_glyph"
repository = "https://github.com/alexheretic/glyph-brush"
keywords = ["font", "ttf", "truetype", "text"]
license = "Apache-2.0"
readme = "README.md"

[dependencies]
glyph_brush_draw_cache = { version = "0.1.1", path = "../draw-cache" }
glyph_brush_layout = { version = "0.2.3", path = "../layout" }
ordered-float = "3"
rustc-hash = "1"
twox-hash = { version = "1.6.1", default-features = false }

# enable twox-hash rand/std everywhere except wasm
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.twox-hash]
version = "1.6.1"
features = ["std"]

[dev-dependencies]
approx = "0.5"
criterion = "0.4"
env_logger = { version = "0.10", default-features = false }
gl = "0.14"
glutin = "0.30.3"
glutin-winit = "0.3"
once_cell = "1.3"
raw-window-handle = "0.5"
spin_sleep = "1"
winit = "0.28"

[[bench]]
name = "glyph_brush"
harness = false
