[package]
name = "glyph_brush"
version = "0.7.12"
authors = ["Alex Butler <alexheretic@gmail.com>"]
edition = "2021"
description = "Fast cached text render library using ab_glyph"
repository = "https://github.com/alexheretic/glyph-brush"
keywords = ["font", "ttf", "truetype", "text"]
license = "Apache-2.0"
readme = "README.md"

[dependencies]
glyph_brush_draw_cache = { version = "0.1.1", path = "../draw-cache" }
glyph_brush_layout = { version = "0.2.3", path = "../layout" }
ordered-float = "5"
rustc-hash = "2"
twox-hash = { version = "2", default-features = false, features = ["xxhash64"] }

# enable twox-hash rand everywhere except wasm
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.twox-hash]
version = "2"
default-features = false
features = ["random"]

[dev-dependencies]
approx = "0.5"
criterion = "0.6"
env_logger = { version = "0.11", default-features = false }
gl = "0.14"
glutin = "0.32"
glutin-winit = "0.5"
raw-window-handle = "0.6"
spin_sleep_util = "0.1"
winit = "0.30"

[[bench]]
name = "glyph_brush"
harness = false
