[package]
name = "glyph_brush_layout"
version = "0.1.9"
authors = ["Alex Butler <alexheretic@gmail.com>"]
edition = "2018"
description = "Text layout for ab_glyph"
repository = "https://github.com/alexheretic/glyph-brush"
keywords = ["layout", "text"]
license = "Apache-2.0"
readme="README.md"

[dependencies]
ab_glyph = { version = "*", path = "../../ab-glyph/glyph" }
xi-unicode = "0.2"
approx = "0.3.2"

[dev-dependencies]
once_cell = "1"
ordered-float = "1"
