[package]
name = "glyph_brush_layout"
version = "0.2.3"
authors = ["Alex Butler <alexheretic@gmail.com>"]
edition = "2018"
description = "Text layout for ab_glyph"
repository = "https://github.com/alexheretic/glyph-brush"
keywords = ["layout", "text"]
license = "Apache-2.0"
readme="README.md"

[dependencies]
ab_glyph = "0.2.1"
xi-unicode = "0.3"
approx = "0.5"

[dev-dependencies]
once_cell = "1"
ordered-float = "2.5.1"
