[package]
name = "glyph_brush_layout"
version = "0.2.4"
authors = ["Alex Butler <alexheretic@gmail.com>"]
edition = "2021"
description = "Text layout for ab_glyph"
repository = "https://github.com/alexheretic/glyph-brush"
keywords = ["layout", "text"]
license = "Apache-2.0"
readme = "README.md"

[dependencies]
ab_glyph = "0.2.1"
approx = "0.5"
xi-unicode = "0.3"

[dev-dependencies]
once_cell = "1"
ordered-float = "4"
